src/app/customer/customer.component.css
.pointer {
    cursor: pointer;
}

.add-customer-button {
    position: absolute;
    right: 10px;
    bottom: 7px;
    z-index: 10;
    color: red;
    background-color: white;
}

.align-cell {
    margin-top: 10px;
}

.toggle-style {
    margin-top: 10px;
    margin-left: 17px;
}


.pagination {
    position: absolute;
    left: 50%;
    transform: translate(-50%, -50%);
    margin: 0;
    padding: 5px;
    background-color: #fff;
    border-radius: 40px;
    box-shadow: 0 3px 3px 0 rgba(0, 0, 0, .3);
}

.pagination li {
    display: inline-block;
    list-style: none;
}

.pagination li a {
    display: block;
    width: 40px;
    height: 40px;
    line-height: 40px;
    background-color: #fff;
    text-align: center;
    text-decoration: none;
    color: #252525;
    border-radius: 4px;
    margin: 5px;
    transition: all .3s ease;
}

.pagination li a:hover,
.pagination li a.active {
    color: #fff;
    background-color: #ff4242;
}

.pagination li:first-child a {
    border-radius: 40px 0 0 40px;
}

.pagination li:last-child a {
    border-radius: 0 40px 40px 0;
}

